run the application with nacos

--- a/gateway/src/main/resources/application-dev.properties
+++ b/gateway/src/main/resources/application-dev.properties
@@ -1,3 +1,4 @@
 ## Dubbo Registry
-dubbo.registry.address=dev.zk.intecsec.com:2181
-dubbo.registry.group = dev_peter
+dubbo.registry.address=nacos://dev.nacos.intecsec.com:8848
+# dubbo.registry.address=dev.zk.intecsec.com:2181
+# dubbo.registry.group = dev_peter
