--- a/gateway/src/main/resources/application-local.properties
+++ b/gateway/src/main/resources/application-local.properties
@@ -1,3 +1,2 @@
-## Dubbo 消费者配置
-dubbo.application.name=intesec-gateway-consumer
-dubbo.registry.address=localhost:2181
+## Dubbo Registry
+dubbo.registry.address=nacos://local.nacos.intecsec.com:8848
