--- a/item-app/src/main/resources/application-dev.properties
+++ b/item-app/src/main/resources/application-dev.properties
@@ -1,7 +1,8 @@
 ## Dubbo Registry
-dubbo.registry.address=dev.zk.intecsec.com:2181
-dubbo.provider.group=dev
-dubbo.consumer.group=dev
+# dubbo.registry.address=dev.zk.intecsec.com:2181
+# dubbo.provider.group=dev
+# dubbo.consumer.group=dev
+dubbo.registry.address=nacos://dev.nacos.intecsec.com:8848
 
 # Database
 spring.datasource.url=jdbc:mysql://dev.mysql.intecsec.com:3306/intecsec_springboot?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
