--- a/item-app/src/main/resources/application.properties
+++ b/item-app/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8085
-spring.profiles.active=local
+spring.profiles.active=dev
 spring.application.name=item
 
 # Database Common
@@ -9,7 +9,7 @@ mybatis.type-aliases-package=com.intecsec.mall.item.mapper
 
 ## Dubbo
 dubbo.application.name=intecsec-item-dubbo-provider
-dubbo.registry.protocol=zookeeper
+# dubbo.registry.protocol=zookeeper
 dubbo.protocol.name=dubbo
 dubbo.provider.threads=200
 dubbo.provider.timeout=2000
@@ -38,7 +38,7 @@ apache.rocketmq.enableHisConsumer=false
 apache.rocketmq.enableOrderConsumer=false
 
 # superq
-superq.executor.appname=xxl-job-executor-sample
-superq.executor.port=9998
-superq.executor.useDubbo=1
+# superq.executor.appname=xxl-job-executor-sample
+# superq.executor.port=9998
+# superq.executor.useDubbo=1
 
