--- a/user-app/src/main/resources/application.properties
+++ b/user-app/src/main/resources/application.properties
@@ -9,7 +9,7 @@ mybatis.type-aliases-package=com.intecsec.mall.user.mapper
 
 ## Dubbo
 dubbo.application.name=intecsec-user-dubbo-provider
-dubbo.registry.protocol=zookeeper
+# dubbo.registry.protocol=zookeeper
 dubbo.protocol.name=dubbo
 dubbo.provider.threads=200
 dubbo.provider.timeout=2000
