--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.application.name=gateway
 spring.profiles.active=dev
 
 ## Dubbo
-dubbo.registry.protocol=zookeeper
+# dubbo.registry.protocol=zookeeper
 dubbo.protocol.name=dubbo
 dubbo.consumer.check=false
