--- a/item-app/pom.xml
+++ b/item-app/pom.xml
@@ -47,11 +47,9 @@
             <artifactId>item-common</artifactId>
         </dependency>
 
-        <!-- xxl-job-core -->
         <dependency>
-            <groupId>com.xuxueli</groupId>
-            <artifactId>xxl-job-core</artifactId>
-            <version>2.2.2-WATSONS</version>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-registry-nacos</artifactId>
         </dependency>
 
     </dependencies>
