--- a/market-app/pom.xml
+++ b/market-app/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>common-rocketmq</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-registry-nacos</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
