--- a/market-app/src/main/resources/application-local.properties
+++ b/market-app/src/main/resources/application-local.properties
@@ -1,6 +1,5 @@
 ## Dubbo Registry
-dubbo.registry.address=localhost:2181
-dubbo.registry.group = local
+dubbo.registry.address=nacos://local.nacos.intecsec.com:8848
 
 # Database Connection
 spring.datasource.url=jdbc:mysql://localhost:3306/intecsec_springboot?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
