--- a/order-app/pom.xml
+++ b/order-app/pom.xml
@@ -53,6 +53,16 @@
             <artifactId>common-rocketmq</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-registry-nacos</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
